tuesday night stuff

--- a/Main_Scripts/B_C_scripts/script1.ipynb
+++ b/Main_Scripts/B_C_scripts/script1.ipynb
@@ -12,8 +12,7 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import scipy.stats as sts\n",
-    "#from NYT_data_collect import saveFilePath\n",
-    "\n"
+    "#from NYT_data_collect import saveFilePath"
    ]
   },
   {
